<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ChooseMapProviderFragment">

    <TextView
        android:id="@+id/tv_choose_maps_provider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/choose_map_provider_prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group_maps_provider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_choose_maps_provider">

        <RadioButton
            android:id="@+id/radio_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/google_maps_provider" />

        <RadioButton
            android:id="@+id/radio_map_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/map_box_provider" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>